RESOLVED FIXED198177
[Pointer Events] The mouseover, mouseout, mouseenter, and mouseleave events should not be prevented while the pointer is down
https://bugs.webkit.org/show_bug.cgi?id=198177
Summary [Pointer Events] The mouseover, mouseout, mouseenter, and mouseleave events s...
Antoine Quint
Reported 2019-05-23 05:04:33 PDT
[Pointer Events] The mouseover, mouseout, mouseenter, and mouseleave events should not be prevented while the pointer is down
Attachments
Patch (6.90 KB, patch)
2019-05-23 05:09 PDT, Antoine Quint
no flags
Archive of layout-test-results from ews103 for mac-highsierra (3.08 MB, application/zip)
2019-05-23 06:12 PDT, EWS Watchlist
no flags
Patch (7.70 KB, patch)
2019-05-23 06:25 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-05-23 05:09:08 PDT
Radar WebKit Bug Importer
Comment 2 2019-05-23 05:29:34 PDT
EWS Watchlist
Comment 3 2019-05-23 06:12:55 PDT
Comment on attachment 370500 [details] Patch Attachment 370500 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/12268566 New failing tests: pointerevents/mouse/compatibility-mouse-events-prevention-mouse-pressed.html
EWS Watchlist
Comment 4 2019-05-23 06:12:57 PDT
Created attachment 370503 [details] Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
Antoine Quint
Comment 5 2019-05-23 06:25:25 PDT
Alexey Proskuryakov
Comment 6 2019-05-23 10:57:16 PDT
Comment on attachment 370504 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370504&action=review > LayoutTests/ChangeLog:11 > + * platform/mac-wk1/TestExpectations: Skipping the test on WK1 where the sequence of dispatched mouse events does not match. Is this something that needs to be fixed at some point in the future?
WebKit Commit Bot
Comment 7 2019-05-23 11:02:20 PDT
Comment on attachment 370504 [details] Patch Clearing flags on attachment: 370504 Committed r245695: <https://trac.webkit.org/changeset/245695>
WebKit Commit Bot
Comment 8 2019-05-23 11:02:21 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 9 2019-05-23 11:32:54 PDT
This broke the macOS build (Element.cpp:291:13: error: unused function 'isCompatibilityMouseEvent' [-Werror,-Wunused-function]). Fixed in r245700
Antoine Quint
Comment 10 2019-05-23 11:38:14 PDT
(In reply to Alexey Proskuryakov from comment #6) > Comment on attachment 370504 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=370504&action=review > > > LayoutTests/ChangeLog:11 > > + * platform/mac-wk1/TestExpectations: Skipping the test on WK1 where the sequence of dispatched mouse events does not match. > > Is this something that needs to be fixed at some point in the future? I'm not sure how important it is to address, but it's worth tracking. Raised https://bugs.webkit.org/show_bug.cgi?id=198190.
Note You need to log in before you can comment on or make changes to this bug.