[Pointer Events] The mouseover, mouseout, mouseenter, and mouseleave events should not be prevented while the pointer is down https://bugs.webkit.org/show_bug.cgi?id=198177

Patch by Antoine Quint <graouts@apple.com> on 2019-05-23
Reviewed by Dean Jackson.

Source/WebCore:

Test: pointerevents/mouse/compatibility-mouse-events-prevention-mouse-pressed.html

The Pointer Event spec, in https://www.w3.org/TR/pointerevents/#compatibility-mapping-with-mouse-events, says that "the mouseover,
mouseout, mouseenter, and mouseleave events are never prevented (even if the pointer is down)." We add a new static function which
indicates what is "compatibility" mouse event since those should be excluded, along with "click", which we already excluded.

* dom/Element.cpp:
(WebCore::isCompatibilityMouseEvent):
(WebCore::Element::dispatchMouseEvent):

LayoutTests:

Add a test that listens to all mouse events and checks which are dispatched in the case preventDefault() is called when handling
"pointerdown" and when it isn't.

* platform/mac-wk1/TestExpectations: Skipping the test on WK1 where the sequence of dispatched mouse events does not match.
* pointerevents/mouse/compatibility-mouse-events-prevention-mouse-pressed-expected.txt: Added.
* pointerevents/mouse/compatibility-mouse-events-prevention-mouse-pressed.html: Added.

Canonical link: https://commits.webkit.org/212244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245695 268f45cc-cd09-0410-ab3c-d52691b4dbfc